--- a/index.Rmd
+++ b/index.Rmd
@@ -5,4 +5,4 @@
 
 <img src="foto.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left">
 
-MEthylation project
+Web site for the MEthylation project
